first bfs test added